--- a/app/views/pages/rentals.html.erb
+++ b/app/views/pages/rentals.html.erb
@@ -13,6 +13,7 @@
 <nav>
 <ul class="goto">
 <table>
+<li><%= link_to 'Contact', contact_path %></li>
 <li><%= link_to 'About', about_path %></li>
 <li><%= link_to 'Listings', listings_path %></li>
 <li><%= link_to 'Agents', agents_path %></li>
