added more images for demo

--- a/app/views/pages/agents.html.erb
+++ b/app/views/pages/agents.html.erb
@@ -6,7 +6,7 @@
 <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 <link href="styles.css" rel="stylesheet" type="text/css"/>
 </head>
-
+<div class="photo-left"><%= image_tag 'terracottage.jpg' %></div>
 <body>
 <header>
 <h1>Our Agents</h1>
@@ -32,31 +32,31 @@
 </p>
 <section>
 <h3 id="Tom" >Thomas Karter (609) 408-9811</h3>
-<div class="photo-right"><%= image_tag 'duck.jpg' %></div>
+<div class="photo-right"><%= image_tag 'duck-thumb.jpg' %></div></br>
 <p>Congratulations!  You have decided to purchase a home, or are thinking about buying one.  Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale?  
 </p>
 </section>
 <section>
 <h3 id="Harold" >Harold Touni (570) 972-9059</h3>
-<div class="photo-right"><%= image_tag 'squirrel.jpg' %></div>
+<div class="photo-right"><%= image_tag 'squirrel-thumb.jpg' %></div></br>
 <p>Congratulations!  You have decided to purchase a home, or are thinking about buying one.  Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale?  
 </p>
 </section>
 <section>
 <h3 id="Michele" >Michelle DeLuca (609) 602-9974</h3>
-<div class="photo-right"><%= image_tag 'bird.jpg' %></div>
+<div class="photo-right"><%= image_tag 'dock-thumb.jpg' %></div></br>
 <p>Congratulations!  You have decided to purchase a home, or are thinking about buying one.  Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale?  
 </p>
 </section>
 <section>
 <h3 id="Tim" >Tim Lenahan (610) 659-5535</h3>
-<div class="photo-right"><%= image_tag 'bear.jpg' %></div>
+<div class="photo-right"><%= image_tag 'bear-thumb.jpg' %></div></br>
 <p>Congratulations!  You have decided to purchase a home, or are thinking about buying one.  Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale?  
 </p>
 </section>
 <section>
 <h3 id="Tony" >Tony Vassallo (570) 430-3522</h3>
-<div class="photo-right"><%= image_tag 'bee.jpg' %></div>
+<div class="photo-right"><%= image_tag 'bee-thumb.jpg' %></div></br>
 <p>Congratulations!  You have decided to purchase a home, or are thinking about buying one.  Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale?  
 </p>
 </section>
