--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -6,35 +6,38 @@ body {
 h1, h2, h3 {
 color:brown;
 }
+
 ul {
 float: right;
 padding-left:50px;
 list-style-image:url("images/bear-thumb.jpg");
 }
+
 a:link, a:visited{
 text-decoration:none;
 color:brown;
 font-weight:bold;
 }
+
 a:hover{	
 color:black;	
 }
 
-
 nav ul{
-	
 list-style:none;
 padding:0;
 }
+
 nav li{
 display:inline;
 float:left;
 }
 
-nav ul li .goto {
+.goto {
 	float: left
 }
-nav a:link, nav a:visited{
+
+nav a:link, nav a:visite {
 background-color:green;
 color:white;
 display:block;
@@ -42,6 +45,7 @@ width:190px;
 text-align:center;
 padding:10px 0;
 }
+
 nav a:hover{
 background-color:black;
 }
@@ -50,8 +54,8 @@ aside figure img {
 	width:180px;
 	height:180px;
 	float:left;
-
 }
+
 aside{
 	width:280px;
 	float:right;
@@ -59,7 +63,6 @@ aside{
 	text-align:left;
 	font-size:80%;
 	font-weight:bold;
-	padding:20px;
 	margin-left:20px;
 }
 .photo-left{
@@ -76,18 +79,21 @@ header{
 	height:100px;
 	margin-bottom:70px;
 }
+
 header h1{
 	color:rgba(256,256,256,0.8);
 	margin-left:30px;
 	margin-top:30px;
 	font-size:50px;
 }
+
 footer{
 	margin:40px 0;
 }
 footer nav{
 	background-color:gray;
 }
+
 footer a:link, a:visited {
 	color:gray;
 	text-decoration:none;
@@ -96,18 +102,17 @@ footer a:link, a:visited {
 	text-align:center;
 	background-color:white;
 }
+
 footer nav a:hover{
 	color:black;
 }
+
 td, th{
 	border:1px solid black;
-	width:20%;
 	text-align:center;
 	padding:5px;
 }
-table{
-	border-collapse:collapse;
-}
+
 video{
 	margin-bottom:20px;
 	margin-left:160px;
@@ -116,15 +121,12 @@ video{
 	filter:grayscale(100%);
 }
 
-section h3 {
-	padding-right:80px;
-}
-
 figure img {
 	float:right;
-	padding-left 20px;
+	padding-left: 20px;
 }
 
 table {
 	float:left;
+	border-collapse:collapse;
 }
