--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -35,7 +35,17 @@
 
 
 <footer>
-
+<nav>
+<ul class="goto">
+<table>
+<li><%= link_to 'Contact', contact_path %></li>
+<li><%= link_to 'About', about_path %></li>
+<li><%= link_to 'Agents', agents_path %></li>
+<li><%= link_to 'Rentals', rentals_path %></li>
+<li><%= link_to 'Home', root_path %></li>
+</table>
+</ul>
+</nav>
 </footer>
 </body>
 </html>
