start over add links

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,8 +48,9 @@ Do you know how much home you can afford? Avoid surprises; call for a no obligat
 <table>
 <li><%= link_to 'Contact', contact_path %></li>
 <li><%= link_to 'About', about_path %></li>
-<li><%= link_to 'Agents', agents_path %></li>
+<li><%= link_to 'Listings', listings_path %></li>
 <li><%= link_to 'Rentals', rentals_path %></li>
+<li><%= link_to 'Agents', agents_path %></li>
 <li><%= link_to 'Home', root_path %></li>
 </table>
 </ul>
