--- a/app/views/pages/listings.html.erb
+++ b/app/views/pages/listings.html.erb
@@ -35,8 +35,9 @@
 <table>
 <li><%= link_to 'Contact', contact_path %></li>
 <li><%= link_to 'About', about_path %></li>
-<li><%= link_to 'Agents', agents_path %></li>
+<li><%= link_to 'Listings', listings_path %></li>
 <li><%= link_to 'Rentals', rentals_path %></li>
+<li><%= link_to 'Agents', agents_path %></li>
 <li><%= link_to 'Home', root_path %></li>
 </table>
 </ul>
