--- a/app/views/pages/rentals.html.erb
+++ b/app/views/pages/rentals.html.erb
@@ -36,7 +36,18 @@ There are two choices for most Residential or Short-Term Vacation rentals:
 </ul>
 </p>
 <footer>
-
+<nav>
+<ul class="goto">
+<table>
+<li><%= link_to 'Contact', contact_path %></li>
+<li><%= link_to 'About', about_path %></li>
+<li><%= link_to 'Listings', listings_path %></li>
+<li><%= link_to 'Rentals', rentals_path %></li>
+<li><%= link_to 'Agents', agents_path %></li>
+<li><%= link_to 'Home', root_path %></li>
+</table>
+</ul>
+</nav>
 </footer>
 </body>
 </html>
