add user_id to listings, login, logout links to home

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,7 +22,8 @@
 </ul>
 </nav>
 </header>
-
+<li><%= link_to 'Login', users_path %></li>
+<li><%= link_to 'Listings', listings_path %></li>
 <aside>
 <div><h3>Selling your house?</h3></div>
 <blockquote>Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale? 
