--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,3 +31,16 @@
     <%= f.submit %>
   </div>
 <% end %>
+<footer>
+<nav>
+<ul class="goto">
+<table>
+<li><%= link_to 'Contact', contact_path %></li>
+<li><%= link_to 'About', about_path %></li>
+<li><%= link_to 'Agents', agents_path %></li>
+<li><%= link_to 'Rentals', rentals_path %></li>
+<li><%= link_to 'Home', root_path %></li>
+</table>
+</ul>
+</nav>
+</footer>
