add sessions, messages, navigation, and update style

--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -71,3 +71,78 @@ div {
     list-style: square;
   }
 }
+
+
+a:link, a:visited{
+text-decoration:none;
+color:brown;
+font-weight:bold;
+}
+a:hover{	
+color:black;	
+}
+div h3 {
+text-align:center;
+}
+
+nav ul{
+	
+list-style:none;
+padding:0;
+}
+nav li{
+
+display:inline;
+float:left;
+}
+nav ul li .goto {
+	float: left
+}
+nav a:link, nav a:visited{
+background-color:lightgrey;
+color:white;
+display:block;
+width:160px;
+text-align:center;
+padding:10px 0;
+}
+nav a:hover{
+background-color:black;
+}
+
+aside figure img {
+	width:180px;
+	height:180px;
+	float:left;
+
+}
+aside{
+	width:280px;
+	float:right;
+	background-color:lightgrey;
+	text-align:left;
+	font-size:80%;
+	font-weight:bold;
+	padding:20px;
+	margin-left:20px;
+}
+.photo-left{
+	float:left;
+	margin-right:20px;
+}
+.photo-right{
+	float:right;
+	margin-left:20px;
+}
+
+header{
+	background-color: grey;
+	height:100px;
+	margin-bottom:70px;
+}
+header h1{
+	color:rgba(256,256,256,0.8);
+	margin-left:30px;
+	margin-top:30px;
+	font-size:50px;
+}
