--- a/app/views/pages/agents.html.erb
+++ b/app/views/pages/agents.html.erb
@@ -10,37 +10,26 @@
 <body>
 <header>
 <h1>Our Agents</h1>
-<nav>
-<ul class="goto">
-<table>
-<li><%= link_to 'Contact', contact_path %></li>
-<li><%= link_to 'About', about_path %></li>
-<li><%= link_to 'Listings', listings_path %></li>
-<li><%= link_to 'Rentals', rentals_path %></li>
-<li><%= link_to 'Home', root_path %></li>
-</table>
-</ul>
-</nav>
+
 </header>
-<h1>Experience Counts</h1>
 
 <h2>We look out for you.</h2>
 
 <p></p>
 <p>An Agent who knows the Poconos!
 
-</p>
+</p></br>
 <section>
 <h3 id="Tom" >Thomas Karter (609) 408-9811</h3>
-<div class="photo-right"><%= image_tag 'duck-thumb.jpg' %></div></br>
+<div class="photo-right"><%= image_tag 'duck-thumb.jpg' %></div>
 <p>Congratulations!  You have decided to purchase a home, or are thinking about buying one.  Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale?  
-</p>
+</p></br>
 </section>
 <section>
 <h3 id="Harold" >Harold Touni (570) 972-9059</h3>
-<div class="photo-right"><%= image_tag 'squirrel-thumb.jpg' %></div></br>
+<div class="photo-right"><%= image_tag 'squirrel-thumb.jpg' %></div>
 <p>Congratulations!  You have decided to purchase a home, or are thinking about buying one.  Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale?  
-</p>
+</p></br>
 </section>
 <section>
 <h3 id="Michele" >Michelle DeLuca (609) 602-9974</h3>
