--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
 <body>
 <header>
 <h1>Terra Cottage Realty Group, LLC</h1>
-
+</br>
 
 </header>
 
@@ -20,7 +20,8 @@
 These home selling reports will assist you in answering the many questions that arise during the home selling process.  When you're armed with the right information, and an experienced real estate professional, you'll be closer to reaching your goal - selling your home fast, and for the best price.
 </aside>
 <section>
-<%= image_tag 'terracottage.jpg' %>
+<%= image_tag 'terracottage.jpg' %></br>
+
 <p>Welcome to Terra Cottage Realty Group, your one stop source for Pocono Mountain Real Estate.
  
 Terra Cottage Realty Group is located in the Heart of Lake Harmony, Pennsylvania home to the Ski Resorts at Jack Frost Mountain and Big Boulder. The Terra Cottage Team specializes in the purchase and sale of single-family residences and income property within the communities of Lake Harmony Estates, Snow Ridge at Jack Frost Mountain, Split Rock Resort, Blue Heron, Mid Lakes and Laurelwoods at Big Boulder Ski Area, Towamensing Trails, Brier Crest Woods, and the surrounding communities of Carbon and Monroe Counties.
