--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,14 +1,8 @@
 <div class="container">
   <footer class="footer">
     <small>
-      Copyright &copy; <a href="https://www.annstreetproperties.com">Ann Street Properties, LLC</a>
-      by <a href="http://www.annstreetproperties.com/">Michael Dougherty</a>
+      Copyright &copy; 
     </small>
-    <nav>
-      <ul>
-        <li><%= link_to "About", about_path %>
-        </li>
-      </ul>
-    </nav>
+
   </footer>
 </div>
