--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -14,23 +14,21 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><%= link_to "Listings", listings_path %></li>
-        <li><%= link_to "Users", users_path %></li>
-        <% if logged_in? %>
+        
+        
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Actions <span class="caret"></span></a>
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Change Page <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><%= link_to 'Listings', listings_path %></li>
+              <li><%= link_to 'Home', root_path %></li>
               <li><%= link_to 'About', about_path %></li>
               <li><%= link_to 'Agents', agents_path %></li>
-              <li role="separator" class="divider"></li>
+             <li><%= link_to 'Listings', listings_path %></li>
               <li><%= link_to 'Rentals', rentals_path %></li>
               <li role="separator" class="divider"></li>
-              <li><%= link_to 'Contact', contact_path %></li>
+              <li><%= link_to 'Contact Us', contact_path %></li>
             </ul>
           </li>
-        <% end %>
- 
-
+       
 
       </ul>
       <form class="navbar-form navbar-left" role="search">
@@ -42,20 +40,30 @@
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li><%= link_to 'Log out', logout_path, method: :delete %></li>
+    
+          <% if current_user.admin? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" 
             aria-expanded="false">Your Profile <%= "Admin" if current_user.admin? %><span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><%= link_to "Edit your proile", edit_user_path(current_user) %></li>
               <li><%= link_to "View your profile", user_path(current_user) %></li>
-              <li><a href="#">Something else here</a>></li>
-              <li role="separator" class="divider"></li>
-              <li><a href="#">Separated link</a></li>
+                <li role="separator" class="divider"></li>
+                <li><%= link_to "Users", users_path %></li>
             </ul>
           </li>
+          <% else %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" 
+            aria-expanded="false">Your Profile<span class="caret"></span></a>
+            <ul class="dropdown-menu">
+                <li><%= link_to "Edit your proile", edit_user_path(current_user) %></li>
+                <li><%= link_to "View your profile", user_path(current_user) %></li>
+            </ul>
+          </li>
+          <% end%>
         <% else %>
-          <li><%= link_to 'Log in', login_path %></li>
-          <li><%= link_to 'Sign up', signup_path %></li>
+        <li><%= link_to 'Login', login_path %></li>
         <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
