--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -1,39 +1,33 @@
 <%= form_for(@listing) do |f| %>
-  <% if @listing.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@listing.errors.count, "error") %> prohibited this listing from being saved:</h2>
-
-      <ul>
-      <% @listing.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  
+  <div class='row'>
+    <div class='col-xs-12'></div>
+     <%= form_for(@listing, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+       <div class="form-group">
+         <div class="control-label col-sm-2">
+           <%= f.label :mlscode %>
+         </div>
+         <div class="col-sm-8">
+           <%= f.text_field :mlscode, class: "form-control", placeholder: "MLS Code", autofocus: true %>
+         </div>
+       </div>
+       <div class="form-group">
+         <div class="control-label col-sm-2">
+           <%= f.label :address %>
+         </div>
+         <div class="col-sm-8">
+           <%= f.text_field :address, rows: 10, class: "form-control", placeholder: "Property address", autofocus: true %>
+         </div>
+       </div>
+       <div class="form-group">
+         <div class="col-sm-offset-2 col-sm-10">
+           <%= f.submit class: 'btn btn-primary btn-lg' %>
+         </div>
+       </div>
+      <% end %> 
+      <div class="col-xs-4 col-xs-offset-4">
+        [ <%= link_to "Cancel request and return to your listings", listings_path %> ]
+      </div>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :mlscode %><br>
-    <%= f.text_field :mlscode %>
   </div>
-  <div class="field">
-    <%= f.label :address %><br>
-    <%= f.text_area :address %>
-  </div>
- 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
-<footer>
-<nav>
-<ul class="goto">
-<table>
-<li><%= link_to 'Contact', contact_path %></li>
-<li><%= link_to 'About', about_path %></li>
-<li><%= link_to 'Agents', agents_path %></li>
-<li><%= link_to 'Rentals', rentals_path %></li>
-<li><%= link_to 'Home', root_path %></li>
-</table>
-</ul>
-</nav>
-</footer>
+<% end %>   
