--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,29 +1,27 @@
-<p id="notice"><%= notice %></p>
+<h1 align="center">All your listings</h1>
 
-<h1>All Listings</h1>
+  <% @listings.each do |listing| %>
+  <div classw="row">
+    <div class="well col-xs-8 col-xs-offset-2">
+      <div class="well well-lg">
+        <div class="listing-mlscode">
+          <%= link_to listing.mlscode, listing_path(listing) %>
+        </div>
+        <div class="listing-address">
+          <%= truncate(listing.address, length: 200) %>
+        </div>
+        <div class="listing-actions">
+          <%= link_to "Edit this listing", edit_listing_path(listing), class: "btn btn-xs btn-primary" %> 
+          <%= link_to "Delete this listing", listing_path(listing), method: :delete, data: { confirm: 
+                      "Are you sure you want to delete this listing?"},class: "btn btn-xs btn-danger" %>
+        </div>
+      </div>  
+    </div>
+  </div>
+  <% end %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Mlscode</th>
-      <th>Address</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @listings.each do |listing| %>
-      <tr>
-        <td><%= listing.mlscode %></td>
-        <td><%= listing.address %></td>
-        <td><%= link_to 'Show', listing %></td>
-        <td><%= link_to 'Edit', edit_listing_path(listing) %></td>
-        <td><%= link_to 'Destroy', listing, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Listing', new_listing_path %>
+<div align="center">
+  <div class="well col-xs-2 col-xs-offset-2">
+    <%= link_to 'New Listing', new_listing_path, class: "btn btn-xs btn-primary" %>
+  </div>
+</div>
