--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,3 +1,17 @@
+<h2 align="center">MLS Code: <%= @listing.mlscode %></h2>
+  <div class="well col-xs-8 col-xs-offset-2">
+    <h4 class="center address"<strong>Address:</strong></h4>
+    <hr>
+    <%= simple_format(@listing.address) %>
+    <div class="listing-actions">
+      <%= link_to "Edit this listing", edit_listing_path(@listing), class: "btn btn-xs btn-primary" %> 
+      <%= link_to "Delete this listing", listing_path(@listing), method: :delete, data: { confirm: 
+                      "Are you sure you want to delete this listing?"},class: "btn btn-xs btn-danger" %>
+      <%= link_to "View all listings", listings_path, class: "btn btn-xs btn-success" %>
+    </div>
+  </div>
+
+
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -10,5 +24,4 @@
   <%= @listing.address %>
 </p>
 
-<%= link_to 'Edit', edit_listing_path(@listing) %> |
-<%= link_to 'Back', listings_path %>
+
