--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -10,6 +10,11 @@
         <div class="listing-address">
           <%= truncate(listing.address, length: 200) %>
         </div>
+        <div class="listing-meta-details">
+          <small>Created by: <%= listing.user_id if listing %> | : 
+          <%= time_ago_in_words(listing.created_at) %> ago, last updates: 
+          <%= time_ago_in_words(listing.updated_at) %> ago</small>
+        </div>
         <div class="listing-actions">
           <%= link_to "Edit this listing", edit_listing_path(listing), class: "btn btn-xs btn-primary" %> 
           <%= link_to "Delete this listing", listing_path(listing), method: :delete, data: { confirm: 
