--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,5 +1,5 @@
 
-<% if @obj.listing %>
+<% if @obj.errors.any? %>
   
       <div class="col-xs-8 col-xs-offset-2">
         <div class="panel panel-danger">
