--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,46 +1,49 @@
-<%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
+<%= render 'errors', obj: @user %>
 
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+  <div class='row'>
+    <div class='col-xs-12'>
+      <%= form_for(@user, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :name %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_field :name, class: "form-control", placeholder: "Enter name", autofocus: true %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :username %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.text_field :username, class: "form-control", placeholder: "Enter username", autofocus: true %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :email %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.email_field :email, class: "form-control", placeholder: "Enter email" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="control-label col-sm-2">
+          <%= f.label :password %>
+        </div>
+        <div class="col-sm-8">
+          <%= f.password_field :password, class: "form-control", placeholder: "Enter password" %>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <%= f.submit(@user.new_record? ? "Sign up" : "Update account", class: 'btn btn-primary btn-lg') %>
+        </div>
+      </div>
       <% end %>
-      </ul>
+      <div class="col-xs-4 col-xs-offset-4">
+        [<%= link_to "Cancel request and return to listings", listings_path %>]
+      </div>
     </div>
-  <% end %>
+</div>
 
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :username %><br>
-    <%= f.text_field :username %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :admin %><br>
-    <%= f.check_box :admin %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
-<footer>
-<nav>
-<ul class="goto">
-<table>
-<li><%= link_to 'Contact', contact_path %></li>
-<li><%= link_to 'About', about_path %></li>
-<li><%= link_to 'Agents', agents_path %></li>
-<li><%= link_to 'Rentals', rentals_path %></li>
-<li><%= link_to 'Home', root_path %></li>
-</table>
-</ul>
-</nav>
-</footer>
