--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -9,27 +9,49 @@
 
 <body>
 <header>
-<h1>Directions</h1>
-<nav>
-<ul class="goto">
-<table>
-<li><%= link_to 'Contact', contact_path %></li>
-<li><%= link_to 'Agents', agents_path %></li>
-<li><%= link_to 'Listings', listings_path %></li>
-<li><%= link_to 'Rentals', rentals_path %></li>
-<li><%= link_to 'Home', root_path %></li>
-</table>
-</ul>
-</nav>
+<h1>Terra Cottage Realty</h1>
+<%= image_tag 'terracottage.jpg' %></br>
 </header>
-<h1>Map</h1>
-
-
+<div class="container-fluid">
+<h2 align="center">
+  <h1>Our Listings</h1>
+    <section>
+    <h3 id="OurListing" >Commercial Property</h3>
+    <div class="photo-right"><%= link_to 'PM-33485.url', "http://www.flexmls.com/share/RfE3/632Route940LakeHarmonyPA18624" %></div>
+    </section>
+    <section>
+    <h3 id="OurListing" ></h3>
+    <div class="photo-right"><%= link_to 'PM-31234.url', "http://www.flexmls.com/share/RfF7/15187LAKEVIEWDRIVELakeHarmonyPA18624" %></div>
+    </section>
+    <section>
+    <h3 id="OurListing" >Residential Property</h3>
+    <div class="photo-right"><%= link_to 'PM-21934.url', "http:///www.flexmls.com/share/RfFN/1401BIRCHSTLakeHarmonyPA18624" %></div>
+    </section>
+    <section>
+    <h3 id="OurListing" ></h3>
+    <div class="photo-right"><%= link_to 'PM-19713.url', "http://www.flexmls.com/share/RfDf/4CGregoryPlLakeHarmonyPA18624" %></div>
+    </section>
+    <section>
+    <h3 id="OurListing" ></h3>
+    <div class="photo-right"><%= link_to 'PM-31163.url', "http://www.flexmls.com/share/RfDx/108LakeDriveLakeHarmonyPA18624" %></div>
+    </section>
+    <section>
+    <h3 id="OurListing" ></h3>
+    <div class="photo-right"><%= link_to 'PM-28456.url', "http://www.flexmls.com/share/RfEE/354RidgeRdPoconoLakePA18347" %></div>
+    </section>
+    <section>
+    <h3 id="OurListing" ></h3>
+    <div class="photo-right"><%= link_to 'PM-30922.url', "http://www.flexmls.com/share/RfHH/263HUMMINGBIRDWAYLakeHarmonyPA18624" %></div>
+    </section>
+    <section>
+    <h3 id="OurListing" >Lakefront Land</h3>
+    <div class="photo-right"><%= link_to 'PM-25971.url', "http://www.flexmls.com/share/RfDF/783ENGLISHIVYCTLongPondPA18334" %></div>
+    </section>
+</h2>
+</div>
 <footer>
-
 </footer>
 </body>
 </html>
 
-<%= image_tag 'trees.jpg' %>
 
