--- a/app/views/pages/agents.html.erb
+++ b/app/views/pages/agents.html.erb
@@ -21,21 +21,18 @@
 </p></br>
 <section>
 <h3 id="Tom" >Thomas Karter (609) 408-9811</h3>
-<div class="photo-right"><%= image_tag 'duck-thumb.jpg' %></div>
-<p>Congratulations!  You have decided to purchase a home, or are thinking about buying one.  Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale?  
+<div class="photo-right"><%= image_tag 'TomK.jpg' %></div>
+<p>Tom brings forty five years of experience in commercial and residential real estate sales, development, and marketing to Terra Cottage Realty. 
+He has knowledge of all phases of construction starting with concept, acquisition, and project planning. He has successfully completed and sold residential 
+planned unit developments to mid rise Condominium units. Let his experience help guide you in your next real estate purchase or project. Whatever your
+needs our Team will assist in management and can help you to choose the best qualified experts in financing, engineering, construction, accounting, and legal matters.
 </p></br>
 </section>
 <section>
 <h3 id="Harold" >Harold Touni (570) 972-9059</h3>
-<div class="photo-right"><%= image_tag 'squirrel-thumb.jpg' %></div>
+<div class="photo-right"><%= image_tag 'HT.jpg' %></div>
 <p>Congratulations!  You have decided to purchase a home, or are thinking about buying one.  Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale?  
 </p></br>
-</section>
-<section>
-<h3 id="Michele" >Michelle DeLuca (609) 602-9974</h3>
-<div class="photo-right"><%= image_tag 'dock-thumb.jpg' %></div></br>
-<p>Congratulations!  You have decided to purchase a home, or are thinking about buying one.  Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale?  
-</p>
 </section>
 <section>
 <h3 id="Tim" >Tim Lenahan (610) 659-5535</h3>
@@ -45,7 +42,7 @@
 </section>
 <section>
 <h3 id="Tony" >Tony Vassallo (570) 430-3522</h3>
-<div class="photo-right"><%= image_tag 'bee-thumb.jpg' %></div></br>
+<div class="photo-right"><%= image_tag 'TonyV.jpg' %></div></br>
 <p>Congratulations!  You have decided to purchase a home, or are thinking about buying one.  Selling your home is an involved process that affects your family and your future.  Before you begin this process, you'll want to ensure that you have the most up-to-date information.  When should you sell?  How do you get the best price? What kinds of renovations should be made prior to the sale?  
 </p>
 </section>
