--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -31,14 +31,14 @@
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
+          <input type="text" class="form-control" placeholder="Search by MLS code">
+         
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
       </form>
       <ul class="nav navbar-nav navbar-right">
         <% if logged_in? %>
           <li><%= link_to 'Log out', logout_path, method: :delete %></li>
-    
           <% if current_user.admin? %>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" 
@@ -46,6 +46,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to "Edit your proile", edit_user_path(current_user) %></li>
               <li><%= link_to "View your profile", user_path(current_user) %></li>
+              <li><%= link_to "View your listings", listings_path %></li>
                 <li role="separator" class="divider"></li>
                 <li><%= link_to "Users", users_path %></li>
             </ul>
@@ -55,12 +56,14 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" 
             aria-expanded="false">Your Profile<span class="caret"></span></a>
             <ul class="dropdown-menu">
-                <li><%= link_to "Edit your proile", edit_user_path(current_user) %></li>
-                <li><%= link_to "View your profile", user_path(current_user) %></li>
+              <li><%= link_to "Edit your profile", edit_user_path(current_user) %></li>
+              <li><%= link_to "View your profile", user_path(current_user) %></li>
+              <li><%= link_to "View your listings", listings_path %></li>
             </ul>
           </li>
           <% end%>
         <% else %>
+        <li>Delete lisitngs if not logged in and leaving</li>
         <li><%= link_to 'Login', login_path %></li>
         <% end %>
       </ul>
