--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -1,4 +1,4 @@
-<h1 align="center">All your listings</h1>
+<h1 align="center">All the current listings</h1>
 
   <% @listings.each do |listing| %>
   <div classw="row">
@@ -11,9 +11,14 @@
           <%= truncate(listing.address, length: 200) %>
         </div>
         <div class="listing-meta-details">
-          <small>Created by: <%= listing.user_id if listing %> | : 
-          <%= time_ago_in_words(listing.created_at) %> ago, last updates: 
-          <%= time_ago_in_words(listing.updated_at) %> ago</small>
+          <small>Created by: 
+          <% if logged_in? && listing.user_id != 0 %>
+            <%= User.find(listing.user_id).name %>
+          <% else %>
+            <%= listing.user_id %>
+          <% end %>|  : 
+            <%= time_ago_in_words(listing.created_at) %> ago, last updates: 
+            <%= time_ago_in_words(listing.updated_at) %> ago</small>
         </div>
         <div class="listing-actions">
           <%= link_to "Edit this listing", edit_listing_path(listing), class: "btn btn-xs btn-primary" %> 
